--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,7 @@ html {
     background-color: white;
     font-size: 0.75em;
     line-height: 1.2;
+    border-bottom: 5px;
 }
 
 ::-moz-selection {
@@ -65,7 +66,7 @@ textarea {
    ========================================================================== */
 
 body {
-    font: 12px/22px Helvetica, Helvetica Neue, Arial;
+    font: 12px/22px 'Raleway', sans-serif;;
 }
 
 .wrapper {
@@ -83,7 +84,8 @@ body {
 
 .footer-container,
 .main aside {
-    border-top: 10px solid #405d5b;
+	border-bottom: 1px solid #000;
+    
 }
 
 .header-container,
@@ -107,12 +109,12 @@ nav ul {
 
 nav a {
     display: block;
-    margin-bottom: 10px;
-    padding: 15px 0;
+    margin-bottom: 0px;
+    padding: 5px 0;
 
     text-align: center;
     text-decoration: none;
-    font-weight: normal;
+    font-weight: 300;
     font-size: 1.2em;
 
     color: #f05223;
@@ -125,7 +127,8 @@ nav a:visited {
 }
 
 nav a:hover {
-    text-decoration: underline;
+    text-decoration: none;
+	border-bottom: 1px dashed #ee4b04;
 }
 
 /* ==============
@@ -166,17 +169,106 @@ header {
     padding: 50px 0px 0px 0px;
 }
 
+article {
+	padding: 0px 0px 0px 20px;
+}
+
 footer {
 	color: #555555;
-	background: white;
-	font-size: 0.75em;
+    font-size: 0.75em;
 }
-section {
+
+img		{
 	padding: 10px;
 }
+section {
 
+}	
 
+section a:hover {
+	opacity: 0.75;	
+}
 
+.subnav {
+	text-align: left;
+	font-size: 90%;
+	list-style: none;
+	padding: 0px;
+	margin: 0px;
+	
+}
+
+.subnav a{
+	font: 'Raleway', sans-serif;
+	color: #405d5b;
+	text-decoration: none;	
+	
+}
+
+.subnav a:hover {
+	font: 'Raleway', sans-serif;
+	color: #405d5b;
+	text-decoration: underline;	
+}
+
+#slide {
+	height: 375px;
+	width: 800px;
+	margin: 20px;
+	position: relative;
+
+}
+#imgslide {
+	height: 375px;
+	width: 800px;
+	position: absolute;
+}
+#left_holder {
+	height: 375px;
+	width: 100px;
+	position: absolute;
+	left: 0px;
+	top: 0px;
+}
+#right_holder {
+	height: 375px;
+	width: 100px;
+	position: absolute;
+	right: 0px;
+	top: 0px;
+}
+.left {
+	height: 30px;
+	width: 30px;
+	position: absolute;
+	top: 40%;
+	left: 0px;
+	
+}
+.right {
+	height: 30px;
+	width: 30px;
+	position: absolute;
+	top: 40%;
+	right: 0px;
+	
+}
+.imgfloatl {
+	float: left;
+	
+}
+
+.imgfloatl:hover {
+	opacity: 0.75;
+	
+}
+.floatr {
+	float: right;
+}
+
+.clear {
+	clear: both;
+}
 
 
 
@@ -197,7 +289,7 @@ section {
         float: left;
         width: 27%;
         margin: 0 1.7%;
-        padding: 25px 2%;
+        padding: 50px 0px 5px 0px;
         margin-bottom: 0;
     }
 
@@ -253,8 +345,8 @@ section {
    ============ */
 
     .main article {
-        float: left;
-        width: 57%;
+        float: right;
+        width: 20%;
     }
 
     .main aside {
@@ -270,7 +362,7 @@ section {
    =============== */
 
     .wrapper {
-        width: 1026px; /* 1140px - 10% for margins */
+        width: 1140px; /* 1140px - 10% for margins */
         margin: 0 auto;
     }
 }
@@ -385,6 +477,7 @@ section {
 
     img {
         max-width: 100% !important;
+        
     }
 
     @page {
